Causeview Package Complete/src/objects/Receipt__c.object
<CustomObject>
    <description>Causeview - Tax receipt for transaction records.</description>
    <fields>
        <fullName>Amount_Not_Eligible__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of gift that is not eligible for receipt.</description>
        <inlineHelpText>Amount of gift that is not eligible for receipt.  Receipt Amount will auto-calculate to subtract this amount from Transaction Taxable Amount.</inlineHelpText>
        <label>Amount Not Eligible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Receipted__c</fullName>
        <description>Amount of gift that is receipted.</description>
        <inlineHelpText>Populate if you would like to provide a specific dollar amount.  This will override all other calculations and set the Receipt Amount to your input.</inlineHelpText>
        <label>Custom Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will auto email a receipt to donor when donation is submitted via DonateNow - from website.</description>
        <label>Auto Email Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Text_Block_Rich_Text__c</fullName>
        <description>Rich text body text block from selected letter</description>
        <inlineHelpText>Rich text body text block from selected letter</inlineHelpText>
        <label>Body Text Block (Rich Text)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the constituent ID for email receipting purposes.  Hidden to end users.</description>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <description>Payment credit card type</description>
        <inlineHelpText>Payment credit card type</inlineHelpText>
        <label>Credit Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <description>Masked credit card number</description>
        <inlineHelpText>Masked credit card number</inlineHelpText>
        <label>Credit Card</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_1__c</fullName>
        <description>Custom rich text field used for merging into acknowledgement/receipt templates.</description>
        <inlineHelpText>Custom rich text field used for merging into acknowledgement/receipt templates.</inlineHelpText>
        <label>Custom Rich Text 1</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_2__c</fullName>
        <description>Custom rich text field used for merging into acknowledgement/receipt templates.</description>
        <inlineHelpText>Custom rich text field used for merging into acknowledgement/receipt templates.</inlineHelpText>
        <label>Custom Rich Text 2</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_3__c</fullName>
        <description>Custom rich text field used for merging into acknowledgement/receipt templates.</description>
        <inlineHelpText>Custom rich text field used for merging into acknowledgement/receipt templates.</inlineHelpText>
        <label>Custom Rich Text 3</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <description>Populated by Conga Merge when receipt is generated.</description>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Receipt__c</fullName>
        <label>Duplicate Receipt #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>The email subject of the email sent to the donor.</description>
        <inlineHelpText>The email subject of the email sent to the donor.</inlineHelpText>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Date__c</fullName>
        <description>Formatted receipt date value used for merging into acknowledgement/receipt templates</description>
        <formula>CASE(MONTH(Receipt_Date__c),1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp;&quot; &quot;&amp; TEXT(DAY(Receipt_Date__c)) &amp;&quot;, &quot;&amp; TEXT(YEAR(Receipt_Date__c))</formula>
        <inlineHelpText>Formatted receipt date value used for merging into acknowledgement/receipt templates</inlineHelpText>
        <label>Formatted Receipt Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Total__c</fullName>
        <description>Total amount of Transaction</description>
        <formula>Gift__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of Transaction</inlineHelpText>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <description>Type of gift received</description>
        <formula>TEXT(Gift__r.Gift_Type__c)</formula>
        <inlineHelpText>Type of gift received</inlineHelpText>
        <label>Gift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <label>Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Informal_Salutation__c</fullName>
        <description>Informal salutation can be used as a merged value for receipts and acknowledgements.</description>
        <formula>IF(ISBLANK( Organization__c ),  Constituent__r.FirstName,  Organization__r.Name )</formula>
        <inlineHelpText>Informal salutation can be used as a merged value for receipts and acknowledgements.</inlineHelpText>
        <label>Informal Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_Text_Block_Rich_Text__c</fullName>
        <description>Rich text introduction text block from selected letter</description>
        <inlineHelpText>Rich text introduction text block from selected letter</inlineHelpText>
        <label>Introduction Text Block (Rich Text)</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Letter_Fund_Name__c</fullName>
        <formula>Gift__r.Letter__r.Fund_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter - Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Introduction__c</fullName>
        <formula>Gift__r.Letter__r.Introduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter - Introduction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Logo__c</fullName>
        <description>Formula field that reference logo URL from Letter</description>
        <formula>Gift__r.Letter__r.Logo__c</formula>
        <inlineHelpText>Link to logo from Letter</inlineHelpText>
        <label>Letter Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Signature_Image__c</fullName>
        <description>URL to letter signature image</description>
        <formula>Gift__r.Letter__r.Signature_Image__c</formula>
        <inlineHelpText>URL to letter signature image</inlineHelpText>
        <label>Letter Signature Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Signature__c</fullName>
        <description>Letter signature text</description>
        <formula>Gift__r.Letter__r.Signature__c</formula>
        <inlineHelpText>Letter signature text</inlineHelpText>
        <label>Letter Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Text_Block__c</fullName>
        <description>The letter Text block</description>
        <label>Letter - Text Block</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Org_Address__c</fullName>
        <formula>$Organization.Street &amp; BR() &amp;
 $Organization.City &amp; &apos; &apos;&amp; $Organization.State &amp; BR() &amp;
 $Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <formula>$Organization.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization that receipt is issued to</description>
        <inlineHelpText>Organization that receipt is issued to</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Receipt</description>
        <label>Original Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Duplicate Receipts</relationshipLabel>
        <relationshipName>Original_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Eligible__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Percentage of the gift that is eligible for tax receipt.</description>
        <inlineHelpText>Populate if you would like to specify a percentage of the original gift.  The Receipt Amount will auto-calculate based on your inputted percentage.</inlineHelpText>
        <label>Percent Eligible</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Print_Date__c</fullName>
        <label>Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Address__c</fullName>
        <description>Receipt issued to: Address</description>
        <label>Receipt Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receipt_Amount__c</fullName>
        <description>The amount of donation that is receiptable</description>
        <formula>IF(NOT(ISNULL(Amount_Receipted__c)),  
    Amount_Receipted__c,
    IF(AND(NOT(ISNULL(Gift__r.Sponsorship_Amount__c)), (Gift__r.Sponsorship_Amount__c &gt; 0)) , 
         Gift_Total__c - Amount_Not_Eligible__c,        

           IF(AND(NOT(ISNULL(Percent_Eligible__c)), (Amount_Not_Eligible__c = 0)), 
                 Gift_Total__c * Percent_Eligible__c,
                  Gift_Total__c - Amount_Not_Eligible__c) 
                      ))</formula>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipt_City__c</fullName>
        <description>The city in which the donation is receipted to</description>
        <label>Receipt City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Receipt Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Country__c</fullName>
        <description>The country in which the receipt is being made to</description>
        <label>Receipt Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date of receipt.</description>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Email_Address__c</fullName>
        <description>Address receipt was emailed to.</description>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Receipt_Name__c</fullName>
        <description>Receipt issued to: Name</description>
        <label>Receipt Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_State_Province__c</fullName>
        <description>The State/Province the donation is being receipted to</description>
        <label>Receipt State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Street__c</fullName>
        <description>Street of where the donation is to be receipted from</description>
        <label>Receipt Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Type__c</fullName>
        <description>Defines the type of receipt either single or consolidated.</description>
        <inlineHelpText>Single: receipt is linked to a single payment
Consolidated: receipt is linked to multiple payments</inlineHelpText>
        <label>Receipt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Zip_Postal_Code__c</fullName>
        <description>The Zip/Postal Code where the donation is receipted to</description>
        <label>Receipt Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <description>Recurring gift payment frequency</description>
        <formula>Gift__r.Recurring_Frequency__c</formula>
        <inlineHelpText>Recurring gift payment frequency</inlineHelpText>
        <label>Recurring Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Rich_Text__c</fullName>
        <description>Rich text signature from selected letter</description>
        <inlineHelpText>Rich text signature from selected letter</inlineHelpText>
        <label>Signature (Rich Text)</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be Issued</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of transaction used for merge into receipt</description>
        <formula>CASE(MONTH( Gift__r.Gift_Date__c ),1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp;&quot; &quot;&amp; TEXT(DAY(Gift__r.Gift_Date__c)) &amp;&quot;, &quot;&amp; TEXT(YEAR(Gift__r.Gift_Date__c))</formula>
        <inlineHelpText>Date of transaction used for merge into receipt</inlineHelpText>
        <label>Transaction Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Taxable_Amount__c</fullName>
        <description>Transaction Approved Amount less Transaction Sponsorship/Benefit Amount.</description>
        <formula>Gift__r.Total_Gift_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction Approved Amount less Transaction Sponsorship/Benefit Amount.</inlineHelpText>
        <label>Transaction Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sysConsolidatedJob__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the receipt record was created by the automated consolidated receipt job.</description>
        <label>_sysConsolidatedJob</label>
        <type>Checkbox</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Receipt_Amount__c</columns>
        <columns>Percent_Eligible__c</columns>
        <columns>Receipt_Address__c</columns>
        <columns>Receipt_Email_Address__c</columns>
        <columns>Gift_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Consolidated_Receipts</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Receipt_Amount__c</columns>
        <columns>Gift_Total__c</columns>
        <columns>Amount_Not_Eligible__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt_Type__c</field>
            <operation>equals</operation>
            <value>Consolidated</value>
        </filters>
        <label>Consolidated Receipts</label>
    </listViews>
    <listViews>
        <fullName>Single_Receipts</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Receipt_Date__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Receipt_Amount__c</columns>
        <columns>Gift_Total__c</columns>
        <columns>Amount_Not_Eligible__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt_Type__c</field>
            <operation>equals</operation>
            <value>Single</value>
        </filters>
        <label>Single Receipts</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <recordTypes>
        <fullName>Duplicate</fullName>
        <active>true</active>
        <description>Deprecated record type</description>
        <label>Duplicate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issued</fullName>
        <active>true</active>
        <description>Read-only receipt record.</description>
        <label>Issued</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending</fullName>
        <active>true</active>
        <description>Receipt pending to be issued.</description>
        <label>Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Void</fullName>
        <active>true</active>
        <description>Void receipt</description>
        <label>Void</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>